Adicionar funcionalidade para consultar CEP

--- a/exercicios/desafio_cep/style.css
+++ b/exercicios/desafio_cep/style.css
@@ -24,13 +24,24 @@ input {
     padding: 8px;
     border: 2px rgb(145, 145, 145) solid;
     border-radius: 10px;
+    text-transform: capitalize;
 }
 
 input:focus {
     outline: none;
 }
 
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
 .visualizar {
     opacity: 50%;
     cursor: not-allowed;
+}
+
+#erro {
+    color: red;
 }
